@@ -182,7 +182,7 @@ void CREArtifactPanel::displayArchetypeChanged(int index)
     object* obj = arch_to_object(arch);
     SET_FLAG(obj, FLAG_IDENTIFIED);
     give_artifact_abilities(obj, myArtifact->item);
-    desc = stringbuffer_finish(describe_item_new(obj, NULL, NULL));
+    desc = stringbuffer_finish(describe_item(obj, NULL, NULL));
     myInstance->setText(desc);
     free(desc);
 
